# part-box

./: .gitignore  AGENTS.md  CONTEXT.md  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py
backend/app/api/: main.py
backend/app/api/graphql/: auth_mutations.py  auth_types.py  category_mutations.py  category_queries.py  component_mutations.py  component_queries.py  component_types.py  context.py  health_queries.py  inventory_log_mutations.py  schema.py
backend/app/core/: auth.py  constants.py  db.py  deployment.py  settings.py
backend/app/grpc/: bootstrap.py  errors.py  factory.py  mappers.py  server.py
backend/app/grpc/servicers/: __init__.py  auth.py  category.py  health.py  inventory.py
backend/app/models/: __init__.py
backend/app/schemas/: category.py  component.py  inventory_log.py  user.py
backend/app/services/: auth.py  category.py  component.py  inventory_log.py
backend/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
backend/graphify-out/cache/: stat-index.json
backend/migrations/models/: 0_20260613232943_init.py  1_20260614011303_v11_low_stock_reallocate.py
backend/proto/v1/: auth.proto  category.proto  common.proto  health.proto  inventory.proto
backend/scripts/: generate_proto.sh  test_user_flow.py
backend/tests/: conftest.py
backend/tests/integration/: test_full_user_flow.py
backend/tests/integration/api/: test_health.py
backend/tests/integration/grpc/: conftest.py  test_grpc.py
backend/tests/unit/core/: test_auth.py  test_settings.py
docker/: envoy.dev.yaml  (+4 more)
(+98 files in other folders)
