[project]
name = "inventory-backend"
version = "0.1.0"
description = "Electronics inventory management backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.7.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "fastapi>=0.115.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.28.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "pyjwt>=2.9.0",
    "strawberry-graphql[fastapi]>=0.254.0",
    "tortoise-orm>=0.21.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
inventory-api = "app.api.main:run"
inventory-grpc = "app.grpc.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: tests requiring PostgreSQL",
]
filterwarnings = [
    "ignore:.*WindowsSelectorEventLoopPolicy.*:DeprecationWarning:aerich._compat",
    "ignore:.*get_event_loop_policy.*:DeprecationWarning:aerich._compat",
    "ignore:.*set_event_loop_policy.*:DeprecationWarning:aerich._compat",
]

[tool.aerich]
tortoise_orm = "app.core.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.ruff]
line-length = 100
target-version = "py312"
